# ore-chasm

./: .gitignore  CMakeLists.txt  INSTALL  README  README.md  astyle.sh  cmake example.cmake  config.h.in  shaderexample.frag
Chipmunk-6.1.1/: CMakeLists.txt
cmake/: FindALLEGRO5.cmake
cmake_modules/: BOX2DConfig.cmake  FindAllegro5Dialog.cmake  FindAllegro5Shader.cmake  FindBox2D.cmake  FindChipmunk.cmake  FindLibRocket.cmake  FindPugiXML.cmake  FindSFML.cmake
glconsole-2.3.0/CVars/: CVar.cpp  CVar.h  CVarMapIO.h  CVarParse.cpp  CVarVectorIO.h  Timestamp.cpp  Timestamp.h  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h  cvars_tinyxml.cpp  cvars_tinyxml.h  cvars_tinyxmlerror.cpp  cvars_tinyxmlparser.cpp
glconsole-2.3.0/Example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
glconsole-2.3.0/Example/Demo2/: Point3D.cc  Point3D.h  Pyramid.cc  Pyramid.h  demo2.cc
glconsole-2.3.0/Example/FltkConsole/: CMakeLists.txt  FltkCVarsDemo.cpp  GLCube.h  GLHelpers.h
glconsole-2.3.0/Example/GlutConsole/: CMakeLists.txt  GlutConsoleDemo.cpp  Makefile  cmake_install.cmake
glconsole-2.3.0/Example/TextConsole/: TextConsoleDemo.cpp
glconsole-2.3.0/FLConsole/: FLConsole.h  FLConsoleFunction.h
glconsole-2.3.0/GLConsole/: GLColor.h  GLConsole.h  GLConsoleFunction.h  GLFont.h
glconsole-2.3.0/TextConsole/: TextConsole.h  TextConsoleFunction.h
gui/: background.rml  cursor.rml  invader.rcss  main_menu.rml  rockete  window.rml
src/: block.cpp  block.h  cloudsystem.cpp  cloudsystem.h  colorscale.cpp  colorscale.h  debug.cpp  debug.h  entity.cpp  entity.h  game.cpp  game.h  imagemanager.cpp  imagemanager.h  logging.cpp  logging.h  main.cpp  player.cpp  player.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  sky.cpp  sky.h  texture.cpp  texture.h  tilerenderer.frag  time.cpp  time.h  world.cpp  world.h
src/gui/: RenderInterfaceSFML.cpp  RenderInterfaceSFML.h  ShellFileInterface.cpp  SystemInterfaceSFML.cpp  SystemInterfaceSFML.h  main.cpp
src/lighting/src/: Constructs.h  Utils.cpp  Utils.h
src/lighting/src/Constructs/: AABB.cpp  AABB.h  Color3f.cpp  Color3f.h  Point2i.cpp  Point2i.h  Vec2f.cpp  Vec2f.h
src/lighting/src/Light/: ConvexHull.cpp  ConvexHull.h  EmissiveLight.cpp  EmissiveLight.h  Light.cpp  Light.h  LightSystem.cpp  LightSystem.h  Light_Point.cpp  Light_Point.h  ShadowFin.cpp  ShadowFin.h
src/lighting/src/QuadTree/: QuadTree.cpp  QuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h  QuadTreeOccupant.cpp  QuadTreeOccupant.h  StaticQuadTree.cpp  StaticQuadTree.h
